[package]
name = "esha-test-module"
version = "0.0.1"
edition = "2021"
authors = ["esha.maharishi <esha.maharishi@viam.com>"]
resolver = "2"
rust-version = "1.83"

[dependencies.micro-rdk]
git = "https://github.com/gvaradarajan/micro-rdk.git"
branch = "falling_edge"
#version = "0.4.1-rc10"
#rev = "v0.4.1-rc10"
features = [
  "esp32"
]

[dependencies]
log = "0.4.22"

[package.metadata.com.viam]
module = true
